# k-ai-security-gateway

./: .dockerignore  .env.example  .gitignore  Dockerfile  EXECUTIVE-SUMMARY.md  K-AI-Security-Gateway-Development-Plan.md  README.ko.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
apps/gateway_api/: main.py
apps/gateway_api/static/: admin.css  admin.html  admin.js
docs/: deployment.md  event-schema.md  mvp-demo-script.md  mvp-release-candidate.md  policy-spec.md  sqlite-store.md  threat-model.md
policies/: default.yaml
scripts/: run-dev.ps1  smoke-test.ps1
src/kai_security/: __init__.py  cli.py  model_router.py  models.py  openai_compat.py  response_guard.py
src/kai_security/approval/: __init__.py  queue.py
src/kai_security/detectors/: __init__.py  document_risk.py  pii.py  prompt_risk.py
src/kai_security/evidence/: __init__.py  sqlite_store.py  store.py
src/kai_security/gateway/: __init__.py  service.py
src/kai_security/policy/: __init__.py  dsl.py  engine.py
src/kai_security/providers/: __init__.py  echo.py  errors.py  openai_compatible.py
src/kai_security/reports/: __init__.py  generator.py
tests/: test_approval_queue.py  test_document_risk_detector.py  test_evidence_store.py  test_gateway_api_contract.py  test_gateway_service.py  test_korean_pii_detector.py  test_model_router_and_cli.py  test_openai_compat.py  test_policy_dsl.py  test_policy_engine.py  test_provider_adapters.py  test_reports.py  test_response_guard.py  test_sqlite_evidence_store.py
