[project]
name = "k-ai-security-gateway"
version = "0.1.0"
description = "Korean-first AI Security Gateway MVP"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "22B Labs" }]
dependencies = []

[project.scripts]
kai-security = "kai_security.cli:main"

[project.optional-dependencies]
api = ["fastapi>=0.111", "uvicorn>=0.30"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.ruff]
line-length = 100
target-version = "py311"
