[project]
name = "k-ai-security-gateway"
version = "0.1.2"
description = "Korean-first AI Security Gateway MVP"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "22B Labs" }]
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn>=0.30,<1.0",
]

[project.scripts]
kai-security = "kai_security.cli:main"

[project.optional-dependencies]
api = ["fastapi>=0.111,<1.0", "uvicorn>=0.30,<1.0"]
dev = ["httpx>=0.27,<1.0", "pytest>=8.0", "ruff>=0.5"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
